[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Level_Components/IDE_Elements/FunctionBlockArea.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Level_Components/IDE_Elements/Counter.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Level_Components/IDE_Elements/FunctionBlock.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Level_Components/IDE_Elements/ClearCodeButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Fonts/kimberley bl.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 178, 78 )

[sub_resource type="DynamicFont" id=4]
size = 20
outline_size = 1
outline_color = Color( 0, 0.231373, 0.482353, 1 )
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 230, 119 )

[node name="F1" type="Control"]
margin_left = 10.0
margin_right = 470.0
margin_bottom = 238.0
rect_min_size = Vector2( 460, 238 )
focus_mode = 1
mouse_filter = 2
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 5.0
margin_right = 125.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 3 )
text = "FUNC1"

[node name="FunctionBlockArea" type="Area2D" parent="."]
position = Vector2( 52, 50 )
z_index = 3
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "Code for this assumes it has 2 non-code block children, change input_event() get_child() parameter input if that number changes"
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="FunctionBlockArea"]
position = Vector2( 178, 80 )
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="FunctionBlockArea"]
margin_right = 356.0
margin_bottom = 156.0
rect_min_size = Vector2( 350, 160 )
mouse_filter = 2
color = Color( 0.137255, 0.423529, 0.431373, 1 )

[node name="Counter" type="Label" parent="."]
margin_left = 137.0
margin_top = 210.0
margin_right = 307.0
margin_bottom = 248.0
rect_min_size = Vector2( 50, 15 )
custom_fonts/font = SubResource( 4 )
text = "0/7"
align = 1
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
margin_right = 460.0
margin_bottom = 238.0
mouse_filter = 2
color = Color( 0, 0.231373, 0.482353, 1 )

[node name="Clickable" type="Area2D" parent="."]
z_index = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Clickable"]
position = Vector2( 230, 119 )
shape = SubResource( 2 )

[node name="Highlight" type="ReferenceRect" parent="Clickable"]
margin_right = 460.0
margin_bottom = 238.0
mouse_filter = 2
border_color = Color( 1, 0.937255, 0, 1 )
border_width = 3.0
editor_only = false

[node name="ClearCode" parent="." instance=ExtResource( 4 )]
margin_left = 386.0
margin_top = 8.0
margin_right = 456.0
margin_bottom = 43.0

[connection signal="focus_entered" from="." to="." method="_on_FunctionBlockControl_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_FunctionBlockControl_focus_exited"]
[connection signal="area_entered" from="FunctionBlockArea" to="FunctionBlockArea" method="_on_FunctionBlockArea_area_entered"]
[connection signal="area_exited" from="FunctionBlockArea" to="FunctionBlockArea" method="_on_FunctionBlockArea_area_exited"]
[connection signal="input_event" from="FunctionBlockArea" to="FunctionBlockArea" method="_on_FunctionBlockArea_input_event"]
[connection signal="input_event" from="Clickable" to="." method="_on_Clickable_input_event"]
